--- a/public/vote.html
+++ b/public/vote.html
@@ -24,18 +24,7 @@
           <h2 id="voteTitle"></h2>
 
           <div class="form-group">
-            <label for="voterName">귀하의 이름 (팀이름/닉네임)</label>
-            <input
-              type="text"
-              id="voterName"
-              placeholder="예: 마케팅팀/김철수"
-              class="input-field"
-              autocomplete="off"
-            >
-          </div>
-
-          <div class="form-group">
-            <label>투표할 멤버 선택 (1~2명, 본인 제외)</label>
+            <label>투표할 멤버 선택 (1~2명)</label>
             <div id="memberOptions" class="member-options"></div>
           </div>
 
@@ -43,8 +32,8 @@
             <p>📌 투표 규칙</p>
             <ul>
               <li>1인당 최대 2표까지 가능합니다</li>
-              <li>본인은 선택할 수 없습니다</li>
-              <li>투표는 1회만 가능합니다</li>
+              <li>투표는 1회만 가능합니다 (무기명 투표)</li>
+              <li>이 브라우저에서 이미 투표한 경우 재투표할 수 없습니다</li>
             </ul>
           </div>
 
